# HexVolumeRenderer

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE-BaseComplex  LICENSE-HexaLab  LICENSE-nanort  README.md  ReplicabilityStamp.sh  build-msvc.bat  build.sh  shell.nix  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-ubuntu.yml  build-vcpkg.yml  release.yml
CMake/: FindCork.cmake  FindGMP.cmake
Data/ReplayScripts/: anc.py  bumpy_torus.py  dragon.py  fig19.py  grayloc.py  motor_close.py  motor_overview.py  sculpture.py
Data/Shaders/: Blit.glsl  ClearView.glsl  FocusOutlineShader.glsl  GammaCorrection.glsl  GaussianBlur.glsl  GlobalDefines.glsl  HexMeshUnified.glsl  InstancedSpheres.glsl  LaplacianOfGaussian.glsl  Mesh.glsl  MeshShader.glsl  MeshShader_NoShading.glsl  MeshWireframe.glsl  Point.glsl  ResolveMSAA.glsl  TiledAddress.glsl  TubeWireframe.glsl  WhiteSolid.glsl  Wireframe.glsl  WireframeFocus.glsl  WireframeLod.glsl  WireframeSurface.glsl  WireframeSurfacePreview.glsl  WireframeSurfaceSingular.glsl
Data/Shaders/ClearView/: DepthCues.glsl  HexMeshUnified.glsl
Data/Shaders/DepthComplexity/: DepthComplexityGather.glsl
Data/Shaders/EdgeDetection/: BlitEdgeDetection.glsl  EdgeDetection.glsl
Data/Shaders/ImageFilters/: NoiseReduction.glsl
Data/Shaders/LineDensityControl/: ConvolutionFilter.glsl  GaussianBlurFloatTexture.glsl  WireframeLineDensityControl.glsl
Data/Shaders/LinkedList/: LinkedListGather.glsl  LinkedListHeader.glsl  LinkedListQuicksort.glsl  LinkedListResolve.glsl  LinkedListSort.glsl
Data/Shaders/LoG/: EdgeDetection.glsl  LaplacianOfGaussian.glsl  MeshEdgeDetection.glsl
Data/Shaders/Tubes/: CreateLineNormals.glsl  CreateTubePoints.glsl
Data/Shaders/Utils/: Antialiasing.glsl  ClosestPointOnLine.glsl  DepthHelper.glsl  Lighting.glsl  LightingFlat.glsl  PointToLineDistance.glsl  RayIntersection.glsl  TiledAddress.glsl  TransferFunction.glsl
Data/Shaders/Volume/: MeshShader_MultiVar.glsl
Data/Shaders/Volume2LinkedList/: LinkedListVolume2Clear.glsl  LinkedListVolume2Gather.glsl  LinkedListVolume2Header.glsl  LinkedListVolume2Resolve.glsl  MeshLinkedListVolume2.glsl
Data/Shaders/VolumeLinkedList/: LinkedListVolumeClear.glsl  LinkedListVolumeGather.glsl  LinkedListVolumeHeader.glsl  LinkedListVolumeResolve.glsl  MeshLinkedListVolume.glsl
Data/TransferFunctions/: BlackWhite.xml  Standard.xml  Standard_grayloc.xml
LICENSE-Libraries/: LICENSE-libpng
docs/compilation/: compilation_linux.md  compilation_msys.md  compilation_vcpkg.md
replicability/: README.md  setup.sh  vcpkg-packages.txt
src/: Main.cpp  MainApp.cpp  MainApp.hpp
src/BaseComplex/: global_functions.cpp  global_functions.h  global_types.h
src/Filters/: HexahedralMeshFilter.hpp  PlaneFilter.cpp  PlaneFilter.hpp  QualityFilter.cpp
src/GeneralMap/: GeneralMap.cpp  GeneralMap.hpp
src/GeneralizedMap/: GeneralizedMap.cpp  GeneralizedMap.hpp
src/HexMesh/: HexMesh.cpp  HexMesh.hpp
src/HexaLab/: app.cpp  app.h  builder.cpp  common.h  hex_quality_color_maps.h  mesh.h  mesh_navigator.cpp  mesh_navigator.h  model.h
src/ImageFilters/: NoiseReduction.cpp  NoiseReduction.hpp
src/Loaders/: HexaLabDatasets.cpp  HexaLabDatasets.hpp  HexahedralMeshLoader.cpp  HexahedralMeshLoader.hpp  MeshLoader.cpp  MeshLoader.hpp  VtkLoader.cpp  VtkLoader.hpp
src/Mesh/BaseComplex/: base_complex.h  global_functions.h  global_types.cpp  global_types.h
src/Mesh/Filters/: HexahedralMeshFilter.hpp  PeelingFilter.cpp  PeelingFilter.hpp  PlaneFilter.cpp  QualityFilter.cpp  QualityFilter.hpp
src/Mesh/HexMesh/: EdgeKey.hpp  HexMesh.cpp  HexMesh.hpp  HexMeshSlim.cpp
src/QualityMeasure/: QualityMeasure.cpp  QualityMeasure.hpp
src/Renderers/: BaseComplexLineRenderer.cpp  BaseComplexLineRenderer.hpp  BaseComplexRenderer.cpp  BaseComplexRenderer.hpp  BaseComplexSurfaceRenderer.cpp  BaseComplexSurfaceRenderer.hpp  ClearViewRenderer.cpp  ClearViewRenderer.hpp  ClearViewRenderer_Faces.cpp  ClearViewRenderer_Faces.hpp  ClearViewRenderer_FacesUnified.cpp  ClearViewRenderer_FacesUnified.hpp  ClearViewRenderer_Volume.cpp  ClearViewRenderer_Volume.hpp  ClearViewRenderer_Volume2.cpp  DepthComplexityRenderer.cpp  DepthComplexityRenderer.hpp  HexSheetRenderer.cpp  HexSheetRenderer.hpp  HexahedralMeshRenderer.hpp  LineDensityControlRenderer.cpp  LineDensityControlRenderer.hpp  LodLinePreviewRenderer.cpp  LodLinePreviewRenderer.hpp  LodLinePreviewRenderer_Sheets.cpp  LodLinePreviewRenderer_Sheets.hpp  LodLinePreviewRenderer_SheetsFaces.cpp  LodLinePreviewRenderer_SheetsFaces.hpp  LodLineRenderer.cpp  LodLineRenderer.hpp  LodLineRendererPerFragment.cpp  LodLineRendererPerFragment.hpp  LodRenderer.cpp  LodRenderer.hpp  PartitionLineRenderer.cpp  PartitionLineRenderer.hpp  SceneData.hpp  SingularityRenderer.cpp  SingularityRenderer.hpp  SingularityTypeCounterRenderer.hpp  (+14 more)
src/Renderers/Helpers/: HexahedronVolume.cpp  HexahedronVolume.hpp  LineRenderingDefines.hpp  PerPixelLinkedListRenderer.cpp  PerPixelLinkedListRenderer.hpp  SingularityInformation.cpp  SingularityInformation.hpp  Sphere.cpp  TriangleSet.hpp
src/Renderers/Intersection/: Pickable.cpp  Pickable.hpp  RayMeshIntersection.cpp  RayMeshIntersection_Embree.cpp  RayMeshIntersection_Embree.hpp
src/Renderers/LOD/: HexahedralSheet.cpp  HexahedralSheet.hpp  LodSheetGeneration.cpp  LodSheetGeneration.hpp  PerfectMatching.cpp  PerfectMatching.hpp  SheetComponentMatching.cpp  SheetComponentMatching.hpp
src/Renderers/Tubes/: CappedTriangleTubesCPU.cpp  CappedTriangleTubesUnionCPU.cpp  LineTubesCPU.cpp  TriangleTubesCPU.cpp  TriangleTubesGPU.cpp  Tubes.cpp  Tubes.hpp
src/Renderers/Widgets/: CheckpointWindow.cpp  CheckpointWindow.hpp
src/Utils/: AutomaticPerformanceMeasurer.cpp  AutomaticPerformanceMeasurer.hpp  CameraPath.cpp  CameraPath.hpp  CsvWriter.cpp  InternalState.cpp  InternalState.hpp  Steamworks.cpp  Steamworks.hpp  VecStringConversion.cpp  VecStringConversion.hpp
src/Utils/SearchStructures/: TriangleSet.hpp
src/Widgets/: DataView.cpp  DataView.hpp  ReplayWidget.cpp  ReplayWidget.hpp
(+115 files in other folders)
